# placid_plastic_anton_simulator

./: .gitignore  Cargo.toml
assets/: Floorplan.blend  apartment.glb  apartment_floor.glb  door.glb
not_game_assets/: Floorplan.blend
src/: anton.rs  apartment.rs  camera.rs  lib.rs  main.rs
src/anton/: anton_type.rs  mod.rs  movement.rs  spawn_anton.rs  talkative.rs
src/anton/behavior_components/: mod.rs  random_sound.rs
src/antons/: antons.rs  mod.rs
src/antons/behaviors/: mod.rs
src/apartment_mapping/: mod.rs  setup.rs
src/game_handler/: mod.rs
src/misc/: mod.rs  play_sound_event.rs
src/ui/: factorio_joke.rs  jointext.rs  main_menu.rs  mod.rs  timer.rs
