[package]
name = "placid_plastic_anton_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_asset_loader = "0.22.0"
bevy_panorbit_camera = "0.23.0"
parry2d = "0.18.0"
rand = "0.9.0"
bevy_mod_billboard = { git = "https://github.com/voximity/bevy_mod_billboard", branch = "migrate-0.15"}
chrono = "0.4.39"

# Release Mode Optimizations

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
